# enum-traits

./: CMakeLists.txt  README.md  compile_flags.txt
include/enum-traits/: enum-traits.hpp
test/: CMakeLists.txt  main.cpp
